--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   mobile_scanner: ^1.1.2
   flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
   
 dev_dependencies:
   flutter_test:
