--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^3.0.1
   intl: ^0.17.0
   brasil_fields: ^1.4.5  
   font_awesome_flutter: ^10.1.0
@@ -68,7 +67,7 @@ flutter:
   assets:
     - assets/svgs/
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -81,17 +80,28 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Roboto-Bold
+      fonts:
+        - asset: assets/fonts/RobotoMono-Bold.ttf
+    - family: Roboto-SemiBold
+      fonts:
+        - asset: assets/fonts/RobotoMono-SemiBold.ttf
+    - family: Roboto-Regular
+      fonts:
+        - asset: assets/fonts/RobotoMono-Regular.ttf
+    - family: Roboto-Medium
+      fonts:
+        - asset: assets/fonts/RobotoMono-Medium.ttf
+    - family: Roboto-Thin
+      fonts:
+        - asset: assets/fonts/RobotoMono-Thin.ttf
+    - family: Roboto-Light
+      fonts:
+        - asset: assets/fonts/RobotoMono-Light.ttf
+    - family: Roboto-ExtraLight
+      fonts:
+        - asset: assets/fonts/RobotoMono-ExtraLight.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
